# PPGEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.bat  premake5.lua  test.txt
Editor/: CMakeLists.txt  editor.cpp  editor.h  main.cpp
PPGE/: CMakeLists.txt  PPGE.h  PPGEpch.cpp  PPGEpch.h
PPGE/Core/: application.cpp  application.h  defines.h  logger.cpp  logger.h  main.h  smart_ptr.h
PPGE/Core/input/: application_event.h  input_event.h  joystick_codes.h  mouse_codes.h
PPGE/core/: application.cpp  application.h  defines.h  game_timer.cpp  game_timer.h  input.cpp  input.h  input_codes.h  logger.cpp  logger.h  main.h  os_helper.h  ppge_enum.h  ppge_object.h  ppge_task.cpp  ppge_task.h  smart_ptr.h  subsystem.cpp  subsystem.h  subsystem_manager.cpp  subsystem_manager.h  widget.cpp  widget.h
PPGE/core/imgui/: imgui_subsystem_build.cpp  imgui_subsytem.cpp  imgui_subsytem.h
PPGE/core/input/: application_event.h  gamepad_codes.h  input.h  input_event.h  key_codes.h
PPGE/ecs/: entity.cpp  entity.h  scene.cpp  scene.h
PPGE/ecs/components/: camera_component.h  debug_component.h  light_component.cpp  light_component.h  mesh_component.h  other_components.h  transform_components.h
PPGE/event/: application_event.h  input_event.h
PPGE/io/: file_system_observer.cpp  file_system_observer.h  resource_loaders.cpp  resource_loaders.h  resource_manager.cpp  resource_manager.h  resources.h
PPGE/layers/: imgui_layer.cpp  imgui_layer.h  layer.cpp  layer.h
PPGE/platform/d3d11/: buffer_d3d11.cpp  buffer_d3d11.h  buffer_d3d11_impl.cpp  buffer_d3d11_impl.h  device_context_d3d11.h  device_context_d3d11_impl.cpp  device_context_d3d11_impl.h  device_d3d11.h  device_d3d11_impl.cpp  device_d3d11_impl.h  imgui_widget_d3d11.cpp  imgui_widget_d3d11.h  pipeline_state_d3d11.h  pipeline_state_d3d11_impl.cpp  pipeline_state_d3d11_impl.h  renderer_system_d3d11.cpp  renderer_system_d3d11.h  renderer_traits_d3d11.h  renderer_types_d3d11_conversion.h  sampler_d3d11.cpp  sampler_d3d11.h  sampler_d3d11_impl.cpp  sampler_d3d11_impl.h  shader_d3d11.cpp  shader_d3d11.h  shader_d3d11_impl.cpp  shader_d3d11_impl.h  shader_resource_binding_d3d11.h  shader_resource_binding_d3d11_impl.cpp  shader_resource_binding_d3d11_impl.h  shader_resource_variable_d3d11.h  shader_resource_variable_d3d11_impl.cpp  shader_resource_variable_d3d11_impl.h  swap_chain_d3d11.h  swap_chain_d3d11_impl.cpp  swap_chain_d3d11_impl.h  texture_d3d11.cpp  texture_d3d11.h  texture_d3d11_impl.cpp  texture_d3d11_impl.h  (+5 more)
PPGE/platform/dx11/: buffer_dx11.cpp  buffer_dx11.h  context_dx11.cpp  context_dx11.h  device_dx11.cpp  device_dx11.h  imgui_layer_dx11.cpp  imgui_layer_dx11.h  imgui_widget_d3d11.cpp  renderer_system_dx11.cpp  renderer_system_dx11.h  shader_dx11.cpp  shader_dx11.h  swap_chain_dx11.cpp  swap_chain_dx11.h  vertex_layout_dx11.cpp  vertex_layout_dx11.h
PPGE/platform/gl/: buffer_gl.cpp  context_gl.cpp  context_gl.h  device_gl.cpp  device_gl.h  imgui_layer_gl.cpp  imgui_layer_gl.h  imgui_widget_gl.cpp  imgui_widget_gl.h  renderer_system_gl.cpp  renderer_system_gl.h  shader_gl.cpp  shader_gl.h  swap_chain_gl.cpp  swap_chain_gl.h
PPGE/platform/glfw/: display_system_glfw.cpp  display_system_glfw.h  gamepad_codes_glfw.h  input_codes_glfw.h  input_glfw.cpp  key_codes_glfw.h  mouse_codes_glfw.h
PPGE/platform/metal/: base_math.cpp  base_math.h  renderer_system_metal.cpp  renderer_system_metal.h
PPGE/platform/osx/: display_system_macos.cpp  display_system_macos.h
PPGE/platform/win32/: display_system_win32.cpp  display_system_win32.h  input_codes_win32.h  input_win32.cpp  joystick_codes_win32.h  key_codes_win32.h  mouse_codes_win32.h
PPGE/platform/windows/: display_system_windows.cpp  display_system_windows.h  file_system_observer_windows.cpp  file_system_observer_windows.h  io_system_windows.cpp  io_system_windows.h
PPGE/renderer/: buffer.h  buffer_base.h  camera.h  camera_controller.cpp  camera_controller.h  context.h  descriptors.h  device.h  device_base.h  device_context.h  device_context_base.h  frame.cpp  frame.h  geometry_helper.cpp  geometry_helper.h  import_helper.cpp  import_helper.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  pipeline_state.h  pipeline_state_base.h  render_graph.cpp  render_graph.h  render_pass.h  render_pass_resource_descs.h  render_states.h  renderer.cpp  renderer.h  renderer_constants.h  renderer_handles.h  renderer_types.h  sampler.h  sampler_base.h  shader.h  shader_base.h  shader_library.cpp  (+16 more)
PPGE/renderer/passes/: clear_buffer_pass.cpp  clear_buffer_pass.h  forward_render_pass.cpp  forward_render_pass.h  geometry_pass.cpp  geometry_pass.h  lighting_pass.cpp  lighting_pass.h  present_pass.cpp  present_pass.h  shadow_pass.cpp  shadow_pass.h
PPGE/renderer/shaders/: color_helpers.hlsl  common_buffers.hlsl  common_constants.hlsl  common_defines.hlsl  common_layouts.hlsl  common_samplers.hlsl  common_structs.hlsl  common_textures.hlsl  forward_pass.hlsl  forward_pass_ps.hlsl  forward_pass_vs.hlsl  geometry_pass_ps.hlsl  (+13 more)
PPGE/rhi/: buffer.h  buffer_base.h  device.h  device_base.h  device_context.h  device_object.h  device_object_base.h  pipeline_state.h  pipeline_state_base.h  renderer_constants.h  rhi_types.h  sampler.h  sampler_base.h  shader.h  shader_base.h  shader_resource_binding.h  shader_resource_binding_base.h  shader_resource_variable.h  shader_resource_variable_base.h  swap_chain.h  swap_chain_base.h  texture.h  texture_base.h  texture_view.h  texture_view_base.h
PPGE/system/: display_system.cpp  display_system.h  io_system.cpp  io_system.h  isystem.h  logger_system.cpp  logger_system.h  renderer_system.cpp  renderer_system.h  ui_system.cpp  ui_system.h  widget_system.cpp  widget_system.h
PPGE/systems/: display_system.cpp  display_system.h  isystem.h  layer_system.cpp  layer_system.h  logger_system.cpp  logger_system.h  subsystem.cpp  subsystem.h  ui_system.cpp  ui_system.h
PPGE/ui/: imgui_layer.cpp  imgui_layer.h  imgui_widget.cpp  imgui_widget.h  ui_layer.h
Samples/: CMakeLists.txt  Simple.cpp
Sandbox/: CMakeLists.txt  Game.cpp
(+14 files in other folders)
